# Helios-Grid

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  project_structure.md
backend/: .coverage  .coveragerc  .env.example  alembic.ini  backend_auth_README.md  coverage_report.txt  coverage_report_utf8.txt  pyproject.toml  pytest.ini  requirements.txt  test_auth.db  test_pytest.db
backend/agents/: coordinator_agent.py  house_agent.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_tables.py  0002_add_refresh_tokens.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  coordinator_agent.py  house_agent.py  market_agent.py
backend/app/analytics/: __init__.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  auth.py  metrics.py  simulation.py  simulation_ws.py  training.py
backend/app/application/: __init__.py
backend/app/core/: __init__.py  config.py  project_config.py  secret_manager.py  security.py  settings.py
backend/app/domain/: __init__.py
backend/app/domain/agents/: __init__.py  coordinator_agent.py  house_agent.py
backend/app/domain/models/: __init__.py  gnn_coordinator.py  market_model.py  ppo_agent.py
backend/app/envs/: __init__.py  grid_env.py  house_env.py  market_env.py
backend/app/infrastructure/: __init__.py  communication_layer.py  data_utils.py  database.py  graph_utils.py  logging_setup.py  logging_utils.py  mlflow_tracker.py  model_registry.py  monitoring.py  path_utils.py  plot_utils.py  rate_limiter.py  ray_client.py  redis_client.py  redis_pubsub.py  s3_client.py  simulation_events.py
backend/app/models/: __init__.py  gnn_coordinator.py  market_model.py  ppo_agent.py
backend/app/repositories/: db_models.py
backend/app/services/: __init__.py  auth_service.py  communication_layer.py  simulation_service.py  training_service.py
backend/app/sim/: __init__.py
backend/app/simulations/: __init__.py  grid_env.py  household_data_engine.py  household_manager.py  market_data_engine.py  market_engine.py  reward_engine.py  topology_engine.py  weather_engine.py
backend/app/tests/: __init__.py
backend/app/utils/: __init__.py  data_utils.py  graph_utils.py  logging_utils.py  plot_utils.py  reward_utils.py
backend/app/workers/: __init__.py  simulation_worker.py  training_worker.py
backend/config/: __init__.py  agent_config.yml  config.yml  market_config.yml
backend/envs/: grid_env.py  house_env.py  market_env.py
backend/helios_grid_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/load_tests/: locustfile.py
backend/models/: communication_layer.py  gnn_coordinator.py  market_model.py
backend/scripts/: check_graph_layout.py  check_topology_64.py  generate_demo_household_market.py  reset_64.ps1  run_load_test.ps1
backend/test_artifacts/: custom_weather.csv  derived_weather.csv  smoke_check.py  source_timeseries.csv  weather_input.csv
backend/tests/: conftest.py  test_derive_weather_api.py  test_house_env.py  test_integration_auth_db.py  test_integration_redis.py  test_integration_workers.py  test_path_utils.py  test_secret_manager.py  test_security.py  test_simulation_api.py  test_training_api.py
backend/utils/: data_utils.py  graph_utils.py  logging_utils.py  plot_utils.py  reward_utils.py
(+52 files in other folders)
