[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helios-grid-backend"
version = "0.1.0"
description = "Backend for Helios-Grid decentralized smart-grid simulation platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "pyyaml>=6.0.2",
    "slowapi>=0.1.5",
    "limits>=2.8.0",
    "locust>=2.24.0",
    "requests>=2.31.0",
    "prometheus-client>=0.20.0",
    "psutil>=6.0.0",
    "structlog>=24.4.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "torch>=2.3.0",
    "gymnasium>=0.29.1",
    "networkx>=3.3",
    "orjson>=3.10.0",
    "SQLAlchemy>=2.0.30",
    "alembic>=1.13.2",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.4",
    "ray[default]>=2.9.3",
    "mlflow>=2.14.1",
    "boto3>=1.34.139"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
    "mypy>=1.11.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's Depends/File in argument defaults is the documented pattern.
"app/api/**/*.py" = ["B008"]
# torch.nn.functional is conventionally aliased as F (PyTorch ecosystem convention).
"app/models/ppo_agent.py" = ["N812"]
"app/domain/models/ppo_agent.py" = ["N812"]
# G is the idiomatic NetworkX variable name for a graph object.
"app/utils/graph_utils.py" = ["N806"]
# Local rename `_H = HouseEnv` is intentional for contract test assertions.
"tests/test_house_env.py" = ["N814"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true